@@ -41,6 +41,8 @@ POSTUNPROG      = 1088
 DIRINDEXES      = 1116
 BASENAMES       = 1117
 DIRNAMES        = 1118
+PAYLOADFORMAT     = 1124
+PAYLOADCOMPRESSOR = 1125
 
 def seekToData(f):
     """
